--- a/scontentcss.css
+++ b/scontentcss.css
@@ -24,9 +24,9 @@
 .roadmap-card {
   flex: 1;
   background-color: #fff;
-  border-radius: 12px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0 -4px 18px rgba(0, 0, 0, 0.159);
+  padding: 1.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -61,7 +61,7 @@
 
 .roadmap-card:hover {
   transform: translateY(-10px);
-  box-shadow: 0 8px 16px #f8bea7;
+  box-shadow: -2px 7px 26px #4e4c4c;
 }
 
 @media screen and (min-width: 1400px) {
